# stella-care

./: .gitignore  .vercelignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/care-token/: Cargo.toml
contracts/care-token/src/: lib.rs
contracts/care-token/test_snapshots/test/: basics.1.json
contracts/claims-validator/: Cargo.toml
contracts/claims-validator/src/: lib.rs
contracts/claims-validator/test_snapshots/test/: basics.1.json
contracts/health-credit/: Cargo.toml
contracts/health-credit/src/: lib.rs
contracts/health-credit/test_snapshots/test/: basics.1.json
contracts/health-pool/: Cargo.toml
contracts/health-pool/src/: lib.rs  test.rs
contracts/health-pool/test_snapshots/test/: test_claim_flow.1.json  test_contribute.1.json  test_errors.1.json  test_governance.1.json  test_join.1.json
frontend/: .env  index.html  package-lock.json  package.json  test-invoke.mjs  test-join.mjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: About.tsx  Claims.tsx  Dashboard.tsx  Governance.tsx  JoinPool.tsx  Landing.tsx  Nav.tsx
frontend/src/hooks/: useFreighter.ts
frontend/src/lib/: stellar.ts
